src/gen/SetGrammarParser.java
package gen;// Generated from /Users/alexeisevko/IdeaProjects/Compiler/SetGrammar.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SetGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_BRACKET=1, CLOSE_BRACKET=2, OPEN_CURLY_BRACKET=3, CLOSE_CURLY_BRACKET=4, 
		OPEN_SQUARE_BRACKET=5, CLOSE_SQUARE_BRACKET=6, ELEMENT=7, SET=8, LET=9, 
		FOREACH=10, IN=11, IF=12, ELSE=13, WHILE=14, MAIN=15, FUNCTION=16, RETURN=17, 
		VOID=18, PRINT=19, GET=20, CONTAINS=21, POWER=22, HAS_NEXT=23, ASSIGN=24, 
		DOT=25, COMMA=26, COLON=27, ARROW=28, PLUS=29, MINUS=30, MULTIPLY=31, 
		DIVIDE=32, NEGATION=33, EQUAL=34, NON_EQUAL=35, LESS=36, GREATER=37, SPACE=38, 
		NAME=39, NUMBER=40, LINE=41;
	public static final int
		RULE_program = 0, RULE_type = 1, RULE_void_sign = 2, RULE_block = 3, RULE_declaration = 4, 
		RULE_declaration_element = 5, RULE_set_expression = 6, RULE_function_call = 7, 
		RULE_input_signature = 8, RULE_single_arg_pattern = 9, RULE_non_single_args_pattern = 10, 
		RULE_function_signature = 11, RULE_functionHeader = 12, RULE_non_void_function = 13, 
		RULE_void_function = 14, RULE_block_return = 15, RULE_block_non_return = 16, 
		RULE_equals = 17, RULE_compare = 18, RULE_simple_compare = 19, RULE_negation_compare = 20, 
		RULE_if_block = 21, RULE_else_block = 22, RULE_while_block = 23, RULE_forEach = 24, 
		RULE_print = 25, RULE_get_expression = 26, RULE_has_next = 27, RULE_power = 28, 
		RULE_contains = 29, RULE_body = 30, RULE_expression = 31;
	public static final String[] ruleNames = {
		"program", "type", "void_sign", "block", "declaration", "declaration_element", 
		"set_expression", "function_call", "input_signature", "single_arg_pattern", 
		"non_single_args_pattern", "function_signature", "functionHeader", "non_void_function", 
		"void_function", "block_return", "block_non_return", "equals", "compare", 
		"simple_compare", "negation_compare", "if_block", "else_block", "while_block", 
		"forEach", "print", "get_expression", "has_next", "power", "contains", 
		"body", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'element'", "'set'", 
		"'let'", "'forEach'", "'in'", "'if'", "'else'", "'while'", "'main'", "'func'", 
		"'return'", "'void'", "'print'", "'get'", "'contains'", "'power'", "'hasNext'", 
		"'='", "'.'", "','", "':'", "'->'", "'+'", "'-'", "'*'", "'/'", "'!'", 
		"'=='", "'!='", "'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET", 
		"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "ELEMENT", "SET", "LET", 
		"FOREACH", "IN", "IF", "ELSE", "WHILE", "MAIN", "FUNCTION", "RETURN", 
		"VOID", "PRINT", "GET", "CONTAINS", "POWER", "HAS_NEXT", "ASSIGN", "DOT", 
		"COMMA", "COLON", "ARROW", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "NEGATION", 
		"EQUAL", "NON_EQUAL", "LESS", "GREATER", "SPACE", "NAME", "NUMBER", "LINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SetGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SetGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(SetGrammarParser.MAIN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<Void_functionContext> void_function() {
			return getRuleContexts(Void_functionContext.class);
		}
		public Void_functionContext void_function(int i) {
			return getRuleContext(Void_functionContext.class,i);
		}
		public List<Non_void_functionContext> non_void_function() {
			return getRuleContexts(Non_void_functionContext.class);
		}
		public Non_void_functionContext non_void_function(int i) {
			return getRuleContext(Non_void_functionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				setState(66);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(64);
					void_function();
					}
					break;
				case 2:
					{
					setState(65);
					non_void_function();
					}
					break;
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(MAIN);
			setState(72);
			block();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				setState(75);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(73);
					void_function();
					}
					break;
				case 2:
					{
					setState(74);
					non_void_function();
					}
					break;
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode ELEMENT() { return getToken(SetGrammarParser.ELEMENT, 0); }
		public TerminalNode SET() { return getToken(SetGrammarParser.SET, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_la = _input.LA(1);
			if ( !(_la==ELEMENT || _la==SET) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Void_signContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(SetGrammarParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(SetGrammarParser.CLOSE_BRACKET, 0); }
		public Void_signContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_void_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterVoid_sign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitVoid_sign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitVoid_sign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Void_signContext void_sign() throws RecognitionException {
		Void_signContext _localctx = new Void_signContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_void_sign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(OPEN_BRACKET);
			setState(83);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY_BRACKET() { return getToken(SetGrammarParser.OPEN_CURLY_BRACKET, 0); }
		public TerminalNode CLOSE_CURLY_BRACKET() { return getToken(SetGrammarParser.CLOSE_CURLY_BRACKET, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(OPEN_CURLY_BRACKET);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LET) | (1L << FOREACH) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << NAME))) != 0)) {
				{
				{
				setState(86);
				body();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(CLOSE_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(SetGrammarParser.LET, 0); }
		public TerminalNode NAME() { return getToken(SetGrammarParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(SetGrammarParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COLON() { return getToken(SetGrammarParser.COLON, 0); }
		public TerminalNode SET() { return getToken(SetGrammarParser.SET, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LET);
			setState(95);
			match(NAME);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(96);
				match(COLON);
				setState(97);
				match(SET);
				}
			}

			setState(100);
			match(ASSIGN);
			setState(101);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_elementContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(SetGrammarParser.LET, 0); }
		public TerminalNode NAME() { return getToken(SetGrammarParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(SetGrammarParser.ASSIGN, 0); }
		public TerminalNode LINE() { return getToken(SetGrammarParser.LINE, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Get_expressionContext get_expression() {
			return getRuleContext(Get_expressionContext.class,0);
		}
		public TerminalNode COLON() { return getToken(SetGrammarParser.COLON, 0); }
		public TerminalNode ELEMENT() { return getToken(SetGrammarParser.ELEMENT, 0); }
		public Declaration_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterDeclaration_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitDeclaration_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitDeclaration_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_elementContext declaration_element() throws RecognitionException {
		Declaration_elementContext _localctx = new Declaration_elementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(LET);
			setState(104);
			match(NAME);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(105);
				match(COLON);
				setState(106);
				match(ELEMENT);
				}
			}

			setState(109);
			match(ASSIGN);
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(110);
				match(LINE);
				}
				break;
			case 2:
				{
				setState(111);
				function_call();
				}
				break;
			case 3:
				{
				setState(112);
				get_expression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_expressionContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY_BRACKET() { return getToken(SetGrammarParser.OPEN_CURLY_BRACKET, 0); }
		public List<TerminalNode> NAME() { return getTokens(SetGrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SetGrammarParser.NAME, i);
		}
		public TerminalNode CLOSE_CURLY_BRACKET() { return getToken(SetGrammarParser.CLOSE_CURLY_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SetGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SetGrammarParser.COMMA, i);
		}
		public Set_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterSet_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitSet_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitSet_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_expressionContext set_expression() throws RecognitionException {
		Set_expressionContext _localctx = new Set_expressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_set_expression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(OPEN_CURLY_BRACKET);
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					match(NAME);
					setState(117);
					match(COMMA);
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(123);
			match(NAME);
			setState(124);
			match(CLOSE_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SetGrammarParser.NAME, 0); }
		public Input_signatureContext input_signature() {
			return getRuleContext(Input_signatureContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(SetGrammarParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(SetGrammarParser.CLOSE_BRACKET, 0); }
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			match(NAME);
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(127);
				input_signature();
				}
				break;
			case 2:
				{
				{
				setState(128);
				match(OPEN_BRACKET);
				setState(129);
				match(CLOSE_BRACKET);
				}
				}
				break;
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_signatureContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(SetGrammarParser.OPEN_BRACKET, 0); }
		public List<TerminalNode> NAME() { return getTokens(SetGrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(SetGrammarParser.NAME, i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(SetGrammarParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SetGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SetGrammarParser.COMMA, i);
		}
		public Input_signatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_signature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterInput_signature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitInput_signature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitInput_signature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_signatureContext input_signature() throws RecognitionException {
		Input_signatureContext _localctx = new Input_signatureContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_input_signature);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(OPEN_BRACKET);
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(133);
					match(NAME);
					setState(134);
					match(COMMA);
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(140);
			match(NAME);
			setState(141);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_arg_patternContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SetGrammarParser.NAME, 0); }
		public TerminalNode COLON() { return getToken(SetGrammarParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Single_arg_patternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_arg_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterSingle_arg_pattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitSingle_arg_pattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitSingle_arg_pattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_arg_patternContext single_arg_pattern() throws RecognitionException {
		Single_arg_patternContext _localctx = new Single_arg_patternContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_single_arg_pattern);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(NAME);
			setState(144);
			match(COLON);
			setState(145);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_single_args_patternContext extends ParserRuleContext {
		public Single_arg_patternContext single_arg_pattern() {
			return getRuleContext(Single_arg_patternContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SetGrammarParser.COMMA, 0); }
		public Non_single_args_patternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_single_args_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).enterNon_single_args_pattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SetGrammarListener ) ((SetGrammarListener)listener).exitNon_single_args_pattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SetGrammarVisitor ) return ((SetGrammarVisitor<? extends T>)visitor).visitNon_single_args_pattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_single_args_patternContext non_single_args_pattern() throws RecognitionException {
		Non_single_args_patternContext _localctx = new Non_single_args_patternContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_non_single_args_pattern);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			single_arg_pattern();
			setState(148);
			match(COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
